clean up the shared object versioning

--- a/software/usb_ir/CMakeLists.txt
+++ b/software/usb_ir/CMakeLists.txt
@@ -13,10 +13,9 @@ include(${CMAKE_SOURCE_DIR}/bootstrap/CMakeMacros/GitVersion.txt)
 Set(FULLVER 1.2.0)
 
 # SONAME links, unrelated to the package version.
-SET(SO_CURRENT 0)
-Set(SO_AGE 3)
-Set(SO_REV 0)
-Set(SOVERSION 0)
+SET(SO_VER 0)
+Set(SO_REV 4)
+Set(SO_REL 0)
 
 # Our Android support is probably junk at this point, but keeping it
 # in another file for reference
@@ -150,16 +149,14 @@ GitVersionH("${CMAKE_SOURCE_DIR}/version.h.in")
 add_library(iguanaIR SHARED ${PIPESRC} ${BASESRC}
             iguanaIR.c iguanaIR.h dataPackets.c dataPackets.h)
 target_link_libraries(iguanaIR ${BASELIBS} ${ARGPLIB})
-set_target_properties(iguanaIR PROPERTIES
-                      VERSION ${FULLVER} SOVERSION ${SOVERSION})
 set_property(TARGET iguanaIR
              APPEND PROPERTY COMPILE_DEFINITIONS IGUANAIR_EXPORTS)
-set_property(TARGET iguanaIR
-             PROPERTY VERSION "${SO_CURRENT}.${SO_AGE}.${SO_REV}")
-set_property(TARGET iguanaIR
-             PROPERTY SOVERSION ${SOVERSION})
+set_target_properties(iguanaIR PROPERTIES
+                      VERSION "${SO_VER}.${SO_REV}.${SO_REL}"
+                      SOVERSION ${SO_VER})
 install(TARGETS iguanaIR
         DESTINATION ${LIBDIR})
+
 # TODO: should have this just build early w/o an explicit dep?
 add_dependencies(iguanaIR VersionH)
 
@@ -168,10 +165,15 @@ add_library(directIguanaIR SHARED
   driver.c driver.h driverapi.h
   sendFormat.c sendFormat.h
   ${BASESRC})
-set_property(TARGET directIguanaIR
-             APPEND PROPERTY COMPILE_DEFINITIONS DIRECT_EXPORTS)
 target_link_libraries(directIguanaIR iguanaIR
                       ${DAEMONLIBS} ${BASELIBS} ${ARGPLIB})
+set_property(TARGET directIguanaIR
+             APPEND PROPERTY COMPILE_DEFINITIONS DIRECT_EXPORTS)
+set_target_properties(directIguanaIR PROPERTIES
+                      VERSION "${SO_VER}.${SO_REV}.${SO_REL}"
+                      SOVERSION ${SO_VER})
+install(TARGETS directIguanaIR
+        DESTINATION ${LIBDIR})
 
 # build the service/server that controls hardware
 add_executable(igdaemon ${DAEMONSRC} ${PIPESRC} ${BASESRC}
